// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Framework ESLint Integration > should lint Angular test file > angular-errors 1`] = `
[
  {
    "column": 2,
    "endColumn": 41,
    "endLine": 3,
    "line": 3,
    "message": "DBAccordionItem must have either headline or headlinePlain attribute",
    "messageId": "headlineRequired",
    "ruleId": "db-ux/accordion-item-headline-required",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 41,
    "endLine": 3,
    "line": 3,
    "message": "db-accordion-item must have either a text property or children content",
    "messageId": "missingContent",
    "ruleId": "db-ux/text-or-children-required",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 69,
    "endLine": 6,
    "line": 6,
    "message": "DBBadge with corner placement must have max 3 characters in text/children",
    "messageId": "textTooLong",
    "ruleId": "db-ux/badge-corner-placement-rules",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 94,
    "endLine": 10,
    "line": 10,
    "message": "DBBadge with corner placement must have max 3 characters in text/children",
    "messageId": "textTooLong",
    "ruleId": "db-ux/badge-corner-placement-rules",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 51,
    "endLine": 14,
    "line": 14,
    "message": "db-notification must have closeButtonText attribute for accessibility",
    "messageId": "missingCloseButtonText",
    "ruleId": "db-ux/close-button-text-required",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 60,
    "endLine": 15,
    "line": 15,
    "message": "db-notification must have closeButtonText attribute for accessibility",
    "messageId": "missingCloseButtonText",
    "ruleId": "db-ux/close-button-text-required",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 25,
    "endLine": 18,
    "line": 18,
    "message": "db-drawer must have closeButtonText attribute for accessibility",
    "messageId": "missingCloseButtonText",
    "ruleId": "db-ux/close-button-text-required",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 58,
    "endLine": 19,
    "line": 19,
    "message": "db-custom-select must have mobileCloseButtonText attribute for accessibility",
    "messageId": "missingCloseButtonText",
    "ruleId": "db-ux/close-button-text-required",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 35,
    "endLine": 30,
    "line": 30,
    "message": "db-input must have a label attribute for accessibility",
    "messageId": "missingLabel",
    "ruleId": "db-ux/form-label-required",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 62,
    "endLine": 33,
    "line": 33,
    "message": "db-input with required will use default browser validation message. Consider adding invalidMessage attribute for better UX",
    "messageId": "missingInvalidMessage",
    "ruleId": "db-ux/form-validation-message-required",
    "severity": 1,
  },
  {
    "column": 2,
    "endColumn": 53,
    "endLine": 36,
    "line": 36,
    "message": "DBControlPanelMobile must have burgerMenuLabel attribute for accessibility",
    "messageId": "missingBurgerMenuLabel",
    "ruleId": "db-ux/control-panel-mobile-burger-menu-label-required",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 43,
    "endLine": 49,
    "line": 45,
    "message": "DBControlPanelNavigationItemGroup must have backButtonText attribute for accessibility",
    "messageId": "missingBackButtonText",
    "ruleId": "db-ux/navigation-item-back-button-text-required",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 15,
    "endLine": 54,
    "line": 52,
    "message": "DBTooltip must not contain interactive elements. Use DBPopover for interactive content",
    "messageId": "noInteractive",
    "ruleId": "db-ux/no-interactive-tooltip-content",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 15,
    "endLine": 54,
    "line": 52,
    "message": "DBTooltip must be a child of an interactive element (button, link, etc.) for accessibility",
    "messageId": "requiresInteractive",
    "ruleId": "db-ux/tooltip-requires-interactive-parent",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 33,
    "endLine": 59,
    "line": 59,
    "message": "DBAccordion must not be nested inside another DBAccordion as it confuses users",
    "messageId": "noNested",
    "ruleId": "db-ux/no-nested-accordion",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 36,
    "endLine": 65,
    "line": 65,
    "message": "Use icon attribute instead of DBIcon child in db-button",
    "messageId": "preferAttribute",
    "ruleId": "db-ux/prefer-icon-attribute",
    "severity": 1,
  },
  {
    "column": 3,
    "endColumn": 36,
    "endLine": 65,
    "line": 65,
    "message": "db-icon must have either a text property or children content",
    "messageId": "missingContent",
    "ruleId": "db-ux/text-or-children-required",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 44,
    "endLine": 69,
    "line": 69,
    "message": "DBSelect must have either an options property or <option> children",
    "messageId": "missingOptions",
    "ruleId": "db-ux/select-requires-options",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 40,
    "endLine": 72,
    "line": 72,
    "message": "DBTag with behavior="removable" must have removeButton attribute for accessibility",
    "messageId": "missingRemoveButton",
    "ruleId": "db-ux/tag-removable-remove-button-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 62,
    "endLine": 76,
    "line": 76,
    "message": "DBTooltip must be a child of an interactive element (button, link, etc.) for accessibility",
    "messageId": "requiresInteractive",
    "ruleId": "db-ux/tooltip-requires-interactive-parent",
    "severity": 2,
  },
]
`;

exports[`Framework ESLint Integration > should lint Angular test file > angular-fixed 1`] = `
"<div>
	<!-- db-ux/accordion-item-headline-required -->
	<db-accordion-item></db-accordion-item>

	<!-- db-ux/badge-corner-placement-rules -->
	<db-badge placement="corner-top-right" label="9999">9999</db-badge>

	<!-- db-ux/badge-no-inline-in-interactive -->
	<db-button type="submit">
		<db-badge placement="corner-top-right" label="Inline in button">Inline in button</db-badge>
	</db-button>

	<!-- db-ux/close-button-text-required -->
	<db-notification closeable>Test</db-notification>
	<db-notification [closeable]="true">Test</db-notification>
	<db-notification [closeable]="false">Test</db-notification>
	<db-notification>Test</db-notification>
	<db-drawer></db-drawer>
	<db-custom-select [label]="'Select'"></db-custom-select>

	<!-- db-ux/button-no-text-requires-tooltip -->
	<db-button type="submit" noText icon="search">Test
  <db-tooltip>Describe action</db-tooltip></db-button>

	<!-- db-ux/button-type-required -->
	<db-button type="submit">Missing type</db-button>
	<db-button type="button">Valid button</db-button>

	<!-- db-ux/form-label-required -->
	<db-input type="text"></db-input>

	<!-- db-ux/form-validation-message-required -->
	<db-input [label]="'Email'" required type="text"></db-input>

	<!-- db-ux/control-panel-mobile-burger-menu-label-required -->
	<db-control-panel-mobile></db-control-panel-mobile>

	<!-- db-ux/input-type-required -->
	<db-input [label]="'Test'" type="text"></db-input>

	<!-- db-ux/link-external-security -->
	<db-link href="https://example.com" target="_blank" content="external" referrerPolicy="no-referrer">External link</db-link>

	<!-- db-ux/navigation-item-back-button-text-required -->
	<db-control-panel-navigation-item-group>
		<db-control-panel-navigation-item
			>Item</db-control-panel-navigation-item
		>
	</db-control-panel-navigation-item-group>

	<!-- db-ux/no-interactive-tooltip-content -->
	<db-tooltip>
		<db-button type="button">Click</db-button>
	</db-tooltip>

	<!-- db-ux/no-nested-accordion -->
	<db-accordion>
		<db-accordion-item headlinePlain="Test">
			<db-accordion></db-accordion>
		</db-accordion-item>
	</db-accordion>

	<!-- db-ux/prefer-icon-attribute -->
	<db-button type="submit">
		<db-icon icon="search"></db-icon>
	</db-button>

	<!-- db-ux/select-requires-options -->
	<db-select [label]="'Select'"></db-select>

	<!-- db-ux/tag-removable-remove-button-required -->
	<db-tag behavior="removable"></db-tag>

	<!-- db-ux/tooltip-requires-interactive-parent -->
	<div>
		<db-tooltip>Tooltip without interactive parent</db-tooltip>
	</div>
</div>
"
`;

exports[`Framework ESLint Integration > should lint React test file > react-errors 1`] = `
[
  {
    "column": 4,
    "endColumn": 21,
    "endLine": 24,
    "line": 24,
    "message": "DBAccordionItem must have either headline or headlinePlain attribute",
    "messageId": "headlineRequired",
    "ruleId": "db-ux/accordion-item-headline-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 21,
    "endLine": 24,
    "line": 24,
    "message": "DBAccordionItem must have either a text property or children content",
    "messageId": "missingContent",
    "ruleId": "db-ux/text-or-children-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 30,
    "endLine": 35,
    "line": 35,
    "message": "DBNotification must have closeButtonText attribute for accessibility",
    "messageId": "missingCloseButtonText",
    "ruleId": "db-ux/close-button-text-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 37,
    "endLine": 36,
    "line": 36,
    "message": "DBNotification must have closeButtonText attribute for accessibility",
    "messageId": "missingCloseButtonText",
    "ruleId": "db-ux/close-button-text-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 14,
    "endLine": 39,
    "line": 39,
    "message": "DBDrawer must have closeButtonText attribute for accessibility",
    "messageId": "missingCloseButtonText",
    "ruleId": "db-ux/close-button-text-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 35,
    "endLine": 40,
    "line": 40,
    "message": "DBCustomSelect must have mobileCloseButtonText attribute for accessibility",
    "messageId": "missingCloseButtonText",
    "ruleId": "db-ux/close-button-text-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 27,
    "endLine": 51,
    "line": 51,
    "message": "DBInput must have a label attribute for accessibility",
    "messageId": "missingLabel",
    "ruleId": "db-ux/form-label-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 50,
    "endLine": 54,
    "line": 54,
    "message": "DBInput with required will use default browser validation message. Consider adding invalidMessage attribute for better UX",
    "messageId": "missingInvalidMessage",
    "ruleId": "db-ux/form-validation-message-required",
    "severity": 1,
  },
  {
    "column": 4,
    "endColumn": 26,
    "endLine": 57,
    "line": 57,
    "message": "DBControlPanelMobile must have burgerMenuLabel attribute for accessibility",
    "messageId": "missingBurgerMenuLabel",
    "ruleId": "db-ux/control-panel-mobile-burger-menu-label-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 39,
    "endLine": 68,
    "line": 68,
    "message": "DBControlPanelNavigationItemGroup must have backButtonText attribute for accessibility",
    "messageId": "missingBackButtonText",
    "ruleId": "db-ux/navigation-item-back-button-text-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 15,
    "endLine": 75,
    "line": 75,
    "message": "DBTooltip must not contain interactive elements. Use DBPopover for interactive content",
    "messageId": "noInteractive",
    "ruleId": "db-ux/no-interactive-tooltip-content",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 15,
    "endLine": 75,
    "line": 75,
    "message": "DBTooltip must be a child of an interactive element (button, link, etc.) for accessibility",
    "messageId": "requiresInteractive",
    "ruleId": "db-ux/tooltip-requires-interactive-parent",
    "severity": 2,
  },
  {
    "column": 6,
    "endColumn": 19,
    "endLine": 82,
    "line": 82,
    "message": "DBAccordion must not be nested inside another DBAccordion as it confuses users",
    "messageId": "noNested",
    "ruleId": "db-ux/no-nested-accordion",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 42,
    "endLine": 87,
    "line": 87,
    "message": "DBButton must have either a text property or children content",
    "messageId": "missingContent",
    "ruleId": "db-ux/text-or-children-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 29,
    "endLine": 92,
    "line": 92,
    "message": "DBSelect must have either an options property or <option> children",
    "messageId": "missingOptions",
    "ruleId": "db-ux/select-requires-options",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 32,
    "endLine": 95,
    "line": 95,
    "message": "DBTag with behavior="removable" must have removeButton attribute for accessibility",
    "messageId": "missingRemoveButton",
    "ruleId": "db-ux/tag-removable-remove-button-required",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 16,
    "endLine": 99,
    "line": 99,
    "message": "DBTooltip must be a child of an interactive element (button, link, etc.) for accessibility",
    "messageId": "requiresInteractive",
    "ruleId": "db-ux/tooltip-requires-interactive-parent",
    "severity": 2,
  },
]
`;

exports[`Framework ESLint Integration > should lint React test file > react-fixed 1`] = `
"import {
	DBAccordion,
	DBAccordionItem,
	DBBadge,
	DBButton,
	DBControlPanelMobile,
	DBControlPanelNavigationItem,
	DBControlPanelNavigationItemGroup,
	DBCustomSelect,
	DBDrawer,
	DBIcon,
	DBInput,
	DBLink,
	DBNotification,
	DBSelect,
	DBTag,
	DBTooltip
} from '@db-ux/react-core-components';

export const TestComponent = () => {
	return (
		<div>
			{/* db-ux/accordion-item-headline-required */}
			<DBAccordionItem></DBAccordionItem>

			{/* db-ux/badge-corner-placement-rules */}
			<DBBadge placement="corner-top-right" label="9999">999</DBBadge>

			{/* db-ux/badge-no-inline-in-interactive */}
			<DBButton type="submit">
				<DBBadge placement="corner-top-right" label="Inline in button">Inl</DBBadge>
			</DBButton>

			{/* db-ux/close-button-text-required */}
			<DBNotification closeable>Test</DBNotification>
			<DBNotification closeable={true}>Test</DBNotification>
			<DBNotification closeable={false}>Test</DBNotification>
			<DBNotification>Test</DBNotification>
			<DBDrawer></DBDrawer>
			<DBCustomSelect label="Select"></DBCustomSelect>

			{/* db-ux/button-no-text-requires-tooltip */}
			<DBButton type="submit" noText icon="search">
  <DBTooltip>Describe action</DBTooltip></DBButton>

			{/* db-ux/button-type-required */}
			<DBButton type="submit">Missing type</DBButton>
			<DBButton type="button">Valid button</DBButton>

			{/* db-ux/form-label-required */}
			<DBInput type="text" />

			{/* db-ux/form-validation-message-required */}
			<DBInput label="Email" required type="text" />

			{/* db-ux/control-panel-mobile-burger-menu-label-required */}
			<DBControlPanelMobile></DBControlPanelMobile>

			{/* db-ux/input-type-required */}
			<DBInput label="Test" type="text" />

			{/* db-ux/link-external-security */}
			<DBLink href="https://example.com" target="_blank" content="external" referrerPolicy="no-referrer">
				External link
			</DBLink>

			{/* db-ux/navigation-item-back-button-text-required */}
			<DBControlPanelNavigationItemGroup>
				<DBControlPanelNavigationItem>
					Item
				</DBControlPanelNavigationItem>
			</DBControlPanelNavigationItemGroup>

			{/* db-ux/no-interactive-tooltip-content */}
			<DBTooltip>
				<DBButton type="submit">Click</DBButton>
			</DBTooltip>

			{/* db-ux/no-nested-accordion */}
			<DBAccordion>
				<DBAccordionItem headlinePlain="Test">
					<DBAccordion></DBAccordion>
				</DBAccordionItem>
			</DBAccordion>

			{/* db-ux/prefer-icon-attribute */}
			<DBButton type="submit" icon="search">
				
			</DBButton>

			{/* db-ux/select-requires-options */}
			<DBSelect label="Select"></DBSelect>

			{/* db-ux/tag-removable-remove-button-required */}
			<DBTag behavior="removable"></DBTag>

			{/* db-ux/tooltip-requires-interactive-parent */}
			<div>
				<DBTooltip>Tooltip without interactive parent</DBTooltip>
			</div>
		</div>
	);
};
"
`;

exports[`Framework ESLint Integration > should lint Vue test file > vue-errors 1`] = `
[
  {
    "column": 3,
    "endColumn": 38,
    "endLine": 4,
    "line": 4,
    "message": "DBAccordionItem must have either headline or headlinePlain attribute",
    "messageId": "headlineRequired",
    "ruleId": "db-ux/accordion-item-headline-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 38,
    "endLine": 4,
    "line": 4,
    "message": "DBAccordionItem must have either a text property or children content",
    "messageId": "missingContent",
    "ruleId": "db-ux/text-or-children-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 55,
    "endLine": 7,
    "line": 7,
    "message": "DBBadge with corner placement must have max 3 characters in text/children",
    "messageId": "textTooLong",
    "ruleId": "db-ux/badge-corner-placement-rules",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 55,
    "endLine": 7,
    "line": 7,
    "message": "DBBadge with corner placement must have a label attribute for accessibility",
    "messageId": "missingLabel",
    "ruleId": "db-ux/badge-corner-placement-rules",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 50,
    "endLine": 15,
    "line": 15,
    "message": "DBNotification must have closeButtonText attribute for accessibility",
    "messageId": "missingCloseButtonText",
    "ruleId": "db-ux/close-button-text-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 58,
    "endLine": 16,
    "line": 16,
    "message": "DBNotification must have closeButtonText attribute for accessibility",
    "messageId": "missingCloseButtonText",
    "ruleId": "db-ux/close-button-text-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 24,
    "endLine": 19,
    "line": 19,
    "message": "DBDrawer must have closeButtonText attribute for accessibility",
    "messageId": "missingCloseButtonText",
    "ruleId": "db-ux/close-button-text-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 51,
    "endLine": 20,
    "line": 20,
    "message": "DBCustomSelect must have mobileCloseButtonText attribute for accessibility",
    "messageId": "missingCloseButtonText",
    "ruleId": "db-ux/close-button-text-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 59,
    "endLine": 23,
    "line": 23,
    "message": "DBButton must have either a text property or children content",
    "messageId": "missingContent",
    "ruleId": "db-ux/text-or-children-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 26,
    "endLine": 30,
    "line": 30,
    "message": "DBInput must have a label attribute for accessibility",
    "messageId": "missingLabel",
    "ruleId": "db-ux/form-label-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 49,
    "endLine": 33,
    "line": 33,
    "message": "DBInput with required will use default browser validation message. Consider adding invalidMessage attribute for better UX",
    "messageId": "missingInvalidMessage",
    "ruleId": "db-ux/form-validation-message-required",
    "severity": 1,
  },
  {
    "column": 3,
    "endColumn": 48,
    "endLine": 36,
    "line": 36,
    "message": "DBControlPanelMobile must have burgerMenuLabel attribute for accessibility",
    "messageId": "missingBurgerMenuLabel",
    "ruleId": "db-ux/control-panel-mobile-burger-menu-label-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 4,
    "endLine": 44,
    "fix": {
      "range": [
        1640,
        1640,
      ],
      "text": " referrerPolicy="no-referrer"",
    },
    "line": 42,
    "message": "DBLink with content="external" should have referrerPolicy attribute",
    "messageId": "missingReferrerPolicy",
    "ruleId": "db-ux/link-external-security",
    "severity": 1,
  },
  {
    "column": 3,
    "endColumn": 39,
    "endLine": 49,
    "line": 47,
    "message": "DBControlPanelNavigationItemGroup must have backButtonText attribute for accessibility",
    "messageId": "missingBackButtonText",
    "ruleId": "db-ux/navigation-item-back-button-text-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 15,
    "endLine": 54,
    "line": 52,
    "message": "DBTooltip must be a child of an interactive element (button, link, etc.) for accessibility",
    "messageId": "requiresInteractive",
    "ruleId": "db-ux/tooltip-requires-interactive-parent",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 22,
    "endLine": 60,
    "line": 58,
    "message": "DBAccordionItem must have either headline or headlinePlain attribute",
    "messageId": "headlineRequired",
    "ruleId": "db-ux/accordion-item-headline-required",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 32,
    "endLine": 59,
    "line": 59,
    "message": "DBAccordion must not be nested inside another DBAccordion as it confuses users",
    "messageId": "noNested",
    "ruleId": "db-ux/no-nested-accordion",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 14,
    "endLine": 66,
    "line": 64,
    "message": "DBButton must have either a text property or children content",
    "messageId": "missingContent",
    "ruleId": "db-ux/text-or-children-required",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 39,
    "endLine": 69,
    "line": 69,
    "message": "DBSelect must have either an options property or <option> children",
    "messageId": "missingOptions",
    "ruleId": "db-ux/select-requires-options",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 39,
    "endLine": 72,
    "line": 72,
    "message": "DBTag with behavior="removable" must have removeButton attribute for accessibility",
    "messageId": "missingRemoveButton",
    "ruleId": "db-ux/tag-removable-remove-button-required",
    "severity": 2,
  },
  {
    "column": 4,
    "endColumn": 61,
    "endLine": 76,
    "line": 76,
    "message": "DBTooltip must be a child of an interactive element (button, link, etc.) for accessibility",
    "messageId": "requiresInteractive",
    "ruleId": "db-ux/tooltip-requires-interactive-parent",
    "severity": 2,
  },
]
`;

exports[`Framework ESLint Integration > should lint Vue test file > vue-fixed 1`] = `
"<template>
	<div>
		<!-- db-ux/accordion-item-headline-required -->
		<DBAccordionItem></DBAccordionItem>

		<!-- db-ux/badge-corner-placement-rules -->
		<DBBadge placement="corner-top-right">9999</DBBadge>

		<!-- db-ux/badge-no-inline-in-interactive -->
		<DBButton type="submit">
			<DBBadge>Inline in button</DBBadge>
		</DBButton>

		<!-- db-ux/close-button-text-required -->
		<DBNotification closeable>Test</DBNotification>
		<DBNotification :closeable="true">Test</DBNotification>
		<DBNotification :closeable="false">Test</DBNotification>
		<DBNotification>Test</DBNotification>
		<DBDrawer></DBDrawer>
		<DBCustomSelect label="Select"></DBCustomSelect>

		<!-- db-ux/button-no-text-requires-tooltip -->
		<DBButton type="submit" noText icon="search"></DBButton>

		<!-- db-ux/button-type-required -->
		<DBButton type="submit">Missing type</DBButton>
		<DBButton type="button">Valid button</DBButton>

		<!-- db-ux/form-label-required -->
		<DBInput type="text" />

		<!-- db-ux/form-validation-message-required -->
		<DBInput label="Email" required type="text" />

		<!-- db-ux/control-panel-mobile-burger-menu-label-required -->
		<DBControlPanelMobile></DBControlPanelMobile>

		<!-- db-ux/input-type-required -->
		<DBInput label="Test" type="text" />

		<!-- db-ux/link-external-security -->
		<DBLink href="https://example.com" target="_blank" content="external" referrerPolicy="no-referrer" referrerPolicy="no-referrer" referrerPolicy="no-referrer" referrerPolicy="no-referrer" referrerPolicy="no-referrer" referrerPolicy="no-referrer" referrerPolicy="no-referrer" referrerPolicy="no-referrer" referrerPolicy="no-referrer"
			>External link</DBLink
		>

		<!-- db-ux/navigation-item-back-button-text-required -->
		<DBControlPanelNavigationItemGroup>
			<DBControlPanelNavigationItem>Item</DBControlPanelNavigationItem>
		</DBControlPanelNavigationItemGroup>

		<!-- db-ux/no-interactive-tooltip-content -->
		<DBTooltip>
			<DBButton type="submit">Click</DBButton>
		</DBTooltip>

		<!-- db-ux/no-nested-accordion -->
		<DBAccordion>
			<DBAccordionItem headlinePlain="Test">
				<DBAccordion></DBAccordion>
			</DBAccordionItem>
		</DBAccordion>

		<!-- db-ux/prefer-icon-attribute -->
		<DBButton type="submit" icon="search">
			
		</DBButton>

		<!-- db-ux/select-requires-options -->
		<DBSelect label="Select"></DBSelect>

		<!-- db-ux/tag-removable-remove-button-required -->
		<DBTag behavior="removable"></DBTag>

		<!-- db-ux/tooltip-requires-interactive-parent -->
		<div>
			<DBTooltip>Tooltip without interactive parent</DBTooltip>
		</div>
	</div>
</template>

<script setup lang="ts">
import {
	DBAccordion,
	DBAccordionItem,
	DBBadge,
	DBButton,
	DBControlPanelMobile,
	DBControlPanelNavigationItem,
	DBCustomSelect,
	DBDrawer,
	DBIcon,
	DBInput,
	DBLink,
	DBNotification,
	DBSelect,
	DBTag,
	DBTooltip
} from "@db-ux/v-core-components";
</script>
"
`;
